2024-04-16T01:01:35Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8698290144 # 186
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-16
* notice: last 14d: unq all: 18 129
* notice: prev accum: outdated-unq outdated-all / unq all: 604 3253 / 622 3380
* notice: next accum: outdated-unq outdated-all / unq all: 604 3253 / 623 3382
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-04-15]

2024-04-15T16:18:11Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8692543254 # 185
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-15
* notice: last 14d: unq all: 18 127
* notice: prev accum: outdated-unq outdated-all / unq all: 602 3250 / 622 3380
* notice: next accum: outdated-unq outdated-all / unq all: 604 3253 / 622 3380
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-04-01] / []

2024-04-14T22:30:45Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8681345687 # 182
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-14
* notice: last 14d: unq all: 20 130
* notice: prev accum: outdated-unq outdated-all / unq all: 589 3115 / 602 3250
* notice: next accum: outdated-unq outdated-all / unq all: 602 3250 / 622 3380
* notice: prev exec diff / last date diff / accum: unq all: +20 +130 -0 -0 / +3 +69 -0 -0 / 3 69
* notice: removed / changed dates: [2024-02-22 2024-02-24 2024-02-25 2024-02-27 2024-02-28 2024-03-01 2024-03-02 2024-03-05 2024-03-06] / [2024-04-01 2024-04-03 2024-04-04 2024-04-05 2024-04-08 2024-04-10 2024-04-11 2024-04-12 2024-04-14]
