@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-04-16T01:01:35Z",
+  "timestamp" : "2024-04-16T08:17:38Z",
   "count_outdated" : 3253,
   "uniques_outdated" : 604,
-  "count" : 3382,
-  "uniques" : 623,
+  "count" : 3383,
+  "uniques" : 624,
   "views" : [
     {
       "timestamp": "2024-04-03T00:00:00Z",
@@ -82,6 +82,15 @@
       "count": 2,
       "count_minmax": [ 2, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-04-16T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
