@@ -1,6 +1,6 @@
 {
-  "count": 129,
-  "uniques": 18,
+  "count": 130,
+  "uniques": 19,
   "views": [
     {
       "timestamp": "2024-04-03T00:00:00Z",
@@ -45,6 +45,11 @@
     {
       "timestamp": "2024-04-15T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-04-16T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
